[tool.poetry]
name = "nofap-bot"
version = "0.0.1"
description = ""
authors = ["Aqendo <a@aqendo.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b6"
asyncpg = "0.27.0"
python-dotenv = "1.0.0"
SQLAlchemy = "2.0.7"
alembic = "^1.13.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
